# smp_utils

./: CHANGELOG  COPYING  COVERAGE  CREDITS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.freebsd  Makefile.in  Makefile.prev  NEWS  README  README.freebsd  README.linux  README.solaris  TODO  build_debian.sh  config.h.in  configure  configure.ac  smp_conf_general.c  smp_conf_route_info.8  smp_conf_route_info.c  smp_conf_zone_man_pass.c  smp_conf_zone_perm_tbl.c  smp_conf_zone_phy_info.c  smp_discover.8  smp_discover.c  smp_discover_list.8  smp_discover_list.c  smp_ena_dis_zoning.c  smp_interface_sel.c  smp_lib.c  smp_lib.h  smp_phy_control.8  smp_phy_control.c  smp_phy_test.8  smp_phy_test.c  smp_read_gpio.8  (+27 more)
debian/: changelog  control  copyright  rules
doc/: Makefile.am  Makefile.in  bsg_sas_smp.txt  smp_conf_general.8  smp_conf_phy_event.8  smp_conf_route_info.8  smp_conf_zone_man_pass.8  smp_conf_zone_perm_tbl.8  smp_conf_zone_phy_info.8  smp_discover.8  smp_discover_list.8  smp_ena_dis_zoning.8  smp_phy_control.8  smp_phy_test.8  smp_read_gpio.8  smp_rep_broadcast.8  smp_rep_exp_route_tbl.8  smp_rep_general.8  smp_rep_manufacturer.8  smp_rep_phy_err_log.8  smp_rep_phy_event.8  smp_rep_phy_event_list.8  smp_rep_phy_sata.8  smp_rep_route_info.8  smp_rep_self_conf_stat.8  smp_rep_zone_man_pass.8  smp_rep_zone_perm_tbl.8  smp_utils.8  smp_utils.html  smp_write_gpio.8  smp_zone_activate.8  smp_zone_lock.8  smp_zone_unlock.8  smp_zoned_broadcast.8
examples/: README  def_pconf.txt  def_permf.txt  dis_zoning_ex.sh  pconf_2i2t.txt  pconf_all10.txt  permf_8i9t.txt  permf_t10annex.txt  rep_nocom_permf_8i9t.txt  rep_permf_8i9t.txt  t10annex_zoning_ex.sh  zoning_ex.sh
include/: Makefile.am  Makefile.in  sg_unaligned.h  smp_lib.h
lib/: Makefile.am  Makefile.in  README_lin_mpt  mpi_type.h  smp_aac_io.c  smp_aac_io.h  smp_dummy.c  smp_fre_cam.c  smp_fre_sel.c  smp_lib.c  smp_lin_bsg.c  smp_lin_bsg.h  smp_lin_sel.c  smp_mptctl_io.c  smp_mptctl_io.h  smp_sol_usmp.c
mpt/: Makefile  Makefile.freebsd  README  mptctl.h  smp_mptctl_io.c  smp_mptctl_io.h  test.c
release-0.93/: README  TODO  smp_conf_route_info.c  smp_discover_list.c  smp_interface_sel.c  smp_utils.spec
release-0.93/debian/: changelog
release-0.93/doc/: smp_discover_list.8
release-0.93/mpt/: getsmp.c  smp_mptctl_io.c
sas_tpl/: Makefile  smp_portal_intf.c  smp_portal_intf.h
sgv4/: Makefile  bsg_sas_smp.txt  smp_sgv4_io.c
src/: Makefile.am  Makefile.in  smp_conf_general.c  smp_conf_phy_event.c  smp_conf_route_info.c  smp_conf_zone_man_pass.c  smp_conf_zone_perm_tbl.c  smp_conf_zone_phy_info.c  smp_discover.c  smp_discover_list.c  smp_ena_dis_zoning.c  smp_phy_control.c  smp_phy_test.c  smp_read_gpio.c  smp_rep_broadcast.c  smp_rep_exp_route_tbl.c  smp_rep_general.c  smp_rep_manufacturer.c  smp_rep_phy_err_log.c  smp_rep_phy_event.c  smp_rep_phy_event_list.c  smp_rep_phy_sata.c  smp_rep_route_info.c  smp_rep_self_conf_stat.c  smp_rep_zone_man_pass.c  smp_rep_zone_perm_tbl.c  smp_write_gpio.c  smp_zone_activate.c  smp_zone_lock.c  smp_zone_unlock.c  smp_zoned_broadcast.c
tags/release-0.90/: smp_lib.c  smp_lib.h  smp_phy_control.8  smp_phy_control.c  smp_rep_manufacturer.c  smp_write_gpio.c
tags/release-0.91/: TODO  smp_conf_route_info.8  smp_conf_route_info.c  smp_discover.8  smp_lib.c  smp_phy_control.c  smp_read_gpio.8  smp_utils.spec  smp_write_gpio.8  smp_write_gpio.c
tags/release-0.92/: COPYING  INSTALL  Makefile  smp_conf_general.c  smp_conf_route_info.8  smp_lib.c  smp_read_gpio.c  smp_rep_manufacturer.c  smp_rep_phy_err_log.8  smp_rep_phy_sata.8  smp_rep_phy_sata.c  smp_utils.8
tags/release-0.93/: Makefile.freebsd  NEWS  smp_phy_control.c
tags/release-0.94/: ChangeLog  Makefile  smp_discover.c  smp_discover_list.c  smp_write_gpio.c
tags/release-0.95/: COVERAGE  smp_phy_test.c
tags/release-0.96/: CREDITS  README  smp_zone_activate.c
tags/release-0.97/: README  configure
tags/release-0.98/: README.freebsd
trunk/: CHANGELOG  COVERAGE  ChangeLog  INSTALL  Makefile  Makefile.freebsd  README  README.linux  configure  smp_conf_general.c  smp_conf_route_info.c  smp_conf_zone_perm_tbl.c  smp_conf_zone_phy_info.c  smp_discover.c  smp_discover_list.c  smp_ena_dis_zoning.c  smp_lib.c  smp_lib.h  smp_phy_control.8  smp_phy_control.c  smp_read_gpio.8  smp_read_gpio.c  smp_rep_exp_route_tbl.c  smp_rep_general.c  smp_rep_manufacturer.8  smp_rep_manufacturer.c  smp_rep_phy_err_log.c  smp_rep_phy_event.c  smp_rep_phy_event_list.c  smp_rep_phy_sata.8  smp_rep_phy_sata.c  smp_rep_route_info.c  smp_rep_zone_man_pass.c  smp_utils.spec  smp_write_gpio.8  smp_write_gpio.c  smp_zone_activate.c  smp_zone_unlock.c  smp_zoned_broadcast.c
trunk/debian/: changelog  rules
trunk/doc/: Makefile.in  bsg_sas_smp.txt  smp_conf_general.8  smp_conf_route_info.8  smp_conf_zone_man_pass.8  smp_conf_zone_perm_tbl.8  smp_conf_zone_phy_info.8  smp_discover.8  smp_discover_list.8  smp_ena_dis_zoning.8  smp_phy_control.8  smp_phy_test.8  smp_read_gpio.8  smp_rep_exp_route_tbl.8  smp_rep_general.8  smp_rep_phy_err_log.8  smp_rep_phy_event.8  smp_rep_phy_event_list.8  smp_rep_phy_sata.8  smp_rep_route_info.8  smp_rep_self_conf_stat.8  smp_rep_zone_man_pass.8  smp_rep_zone_perm_tbl.8  smp_utils.8  smp_utils.html  smp_write_gpio.8  smp_zone_activate.8  smp_zone_lock.8  smp_zone_unlock.8  smp_zoned_broadcast.8
trunk/examples/: README  def_pconf.txt  dis_zoning_ex.sh  pconf_8.txt  pconf_all10.txt  permf_8all.txt  permf_8i9t.txt  permf_8isol.txt  t10annex_zoning_ex.sh  zoning_ex.sh
trunk/include/: Makefile.am  Makefile.in  smp_lib.h
trunk/lib/: Makefile.am  Makefile.in  aacraid.h  mpi_type.h  mptctl.h  smp_aac_io.c  smp_fre_cam.c  smp_lib.c  smp_lin_bsg.c  smp_lin_sel.c  smp_mptctl_io.c
trunk/mpt/: Makefile  Makefile.freebsd  smp_mptctl_io.c
trunk/sgv4/: Makefile  smp_sgv4_io.c
trunk/src/: Makefile.am  smp_conf_general.c  smp_conf_phy_event.c  smp_conf_route_info.c  smp_conf_zone_man_pass.c  smp_conf_zone_perm_tbl.c  smp_conf_zone_phy_info.c  smp_discover.c  smp_discover_list.c  smp_ena_dis_zoning.c  smp_phy_control.c  (+18 more)
(+74 files in other folders)
