
SUBDIRS = include \
	  lib \
	  src \
	  doc

EXTRA_DIST=autogen.sh COVERAGE CREDITS

distclean-local:
	rm -rf \
	  ar-lib \
	  autom4te.cache \
	  aclocal.m4 \
	  build-stamp \
	  compile \
	  configure \
	  config.guess \
	  config.guess.cdbs-orig \
	  config.sub.cdbs-orig \
	  config.sub \
	  config.h.in \
	  config.h \
	  config.log \
	  config.status \
	  Makefile \
	  Makefile.in \
	  missing \
	  install-sh \
	  depcomp \
	  ltmain.sh

