
## Copied from sg3_utils. Some remnants left commented out as examples
## if OS_LINUX

man_MANS = \
	smp_conf_general.8 smp_conf_route_info.8 smp_conf_zone_man_pass.8 \
	smp_conf_zone_perm_tbl.8 smp_conf_zone_phy_info.8 smp_discover.8 \
	smp_discover_list.8 smp_ena_dis_zoning.8 smp_phy_control.8 \
	smp_phy_test.8 smp_read_gpio.8 smp_rep_broadcast.8  \
	smp_rep_exp_route_tbl.8 smp_rep_general.8 smp_rep_manufacturer.8 \
	smp_rep_phy_err_log.8 smp_rep_phy_event.8 smp_rep_phy_event_list.8 \
	smp_rep_phy_sata.8 smp_rep_route_info.8 smp_rep_self_conf_stat.8 \
	smp_rep_zone_man_pass.8 smp_rep_zone_perm_tbl.8 smp_utils.8 \
	smp_write_gpio.8 smp_zone_activate.8 smp_zoned_broadcast.8 \
	smp_zone_lock.8 smp_zone_unlock.8

## distclean-local:
## 	rm -f sg_scan.8

## sg_scan.8 : sg_scan.8.linux
## 	cp -p sg_scan.8.linux sg_scan.8

## endif


